--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,8 @@ INCLUDES = -I../ -I ../osx
 #include_HEADERS = $(top_srcdir)/database.h $(top_srcdir)/search.h $(top_srcdir)/tags.h
 lib_LTLIBRARIES = libplatform.la
 libplatform_la_SOURCES = database.cpp
+libplatform_la_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/platform
 noinst_LTLIBRARIES = libobjcpplibs.la
 libobjcpplibs_la_SOURCES = search.cpp tags.cpp
-libobjcpplibs_la_CPPFLAGS = -x objective-c++
-libplatform_la_LIBADD = $(top_srcdir)/osx/libosx.la $(top_srcdir)/sqlite3x/libsqlite3x.la libobjcpplibs.la
+libobjcpplibs_la_CPPFLAGS = -x objective-c++ -I$(top_srcdir)
+libplatform_la_LIBADD = $(top_builddir)/osx/libosx.la $(top_builddir)/sqlite3x/libsqlite3x.la libobjcpplibs.la $(commoncpp_LIBS)
