--- a/sqlite3x/Makefile.am
+++ b/sqlite3x/Makefile.am
@@ -1,4 +1,4 @@
 noinst_LTLIBRARIES = libsqlite3x.la
-libsqlite3x_la_SOURCES = sqlite3x_connection.cpp sqlite3x_exception.cpp sqlite3x_command.cpp sqlite3x_cursor.cpp sqlite3x_settings_db.cpp sqlite3x_transaction.cpp
-libsqlite3x_la_CXXFLAGS = -I$(top_srcdir)/platform
-libsqlite3x_la_LIBADD = -lsqlite3
+libsqlite3x_la_SOURCES = sqlite3x_connection.cpp sqlite3x_exception.cpp sqlite3x_command.cpp sqlite3x_cursor.cpp sqlite3x_transaction.cpp
+libsqlite3x_la_CPPFLAGS = -I$(top_srcdir)/platform
+libsqlite3x_la_LIBADD = $(sqlite_LIBS)
