reorganize test.cpp into tests and create demos with a database test
Signed-off-by: Kevin Ross <r0ssar00@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -79,6 +79,8 @@ AC_CONFIG_FILES([Makefile
                  osx/Makefile
                  sqlite3x/Makefile
                  src/Makefile
+		 tests/Makefile
+		 demos/Makefile
 		 doc/Doxyfile
 		 doc/Makefile])
 AC_OUTPUT
